--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -447,7 +447,6 @@ p:last-child,
   padding: 0.5em;
   position: fixed;
   z-index: 501;
-  transition: background-color 0.5s;
 
   .logo-line2,
   .navbar-text,
